Sun Mar 14 12:58:30 2004  Owen Taylor  <otaylor@redhat.com>

	* glib/gmain.c: if _POLL_EMUL_H is defined, undefine
	HAVE_POLL to prefer our own poll() emulation to the
	lame OS/X one. (#136956, Manish Singh)

Sat Mar 13 23:30:53 2004  Owen Taylor  <otaylor@redhat.com>

	* glib/gmacros.h (G_STMT_START): Add __extension__
	to G_STMT_START to quite gcc -pedantic. (#131899,
	Olivier Biot)

Sat Mar 13 23:18:45 2004  Owen Taylor  <otaylor@redhat.com>

	* tests/env-test.c (main): Remove critical log handler;
	we can't trigger g_return_if_fails() in our test suite
	even silently, because the user could have compiled
	with --disable-debug. #if 0 the tests for
	g_setenv/g_unsetenv with a "foo=bar" variable name.
	(#136709, reported by Frédéric L. W. Meunier)

Sat Mar 13 23:10:35 2004  Owen Taylor  <otaylor@redhat.com>

	Some warning fixes for the Sun compiler (Reported by 
	David L. Cooper II, #136401)

	* glib/giochannel.c (g_io_channel_read): Return
	G_IO_ERROR_NONE, not G_IO_STATUS_NORMAL, since hte
	function returns a GIOError.

	* glib/guniprop.c: Fix some guchar/gchar confusion
	with special_case_table.

Fri Mar 12 15:30:58 2004  Manish Singh  <yosh@gimp.org>

	* glib/gbacktrace.h: ia32's G_BREAKPOINT() implementation works on
	amd64 too. Enable it.

Fri Mar 12 15:21:22 2004  Manish Singh  <yosh@gimp.org>

	* glib/gatomic.c: Non-optimizing compile fails for two asm
	statements on PowerPC. Use generic implementaton for those
	cases. Spotted by Christof Petig <christof@petig-baender.de>,
	fix by Sebastian Wilhelmi. Bug #137006 has a possible alternate
	solution, but we'll be conservative for now.

Thu Mar 11 02:05:13 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/gmain.c (g_main_depth): Remove an extra semicolon.
	Spotted by Kjartan Maraas.

2004-03-10  Tor Lillqvist  <tml@iki.fi>

	* glib/gspawn-win32.c
	* glib/gspawn-win32-helper.c: Implement
	G_SPAWN_FILE_AND_ARGV_ZERO. (#136792, Bruce Hochstetler)

	* tests/spawn-test.c
	* tests/spawn-test-win32-gui.c: Test it.
